--- a/inventario-service.properties
+++ b/inventario-service.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql1=true
 spring.jpa.hibernate.ddl-auto1=update
 spring.datasource.driver-class-name1=com.mysql.cj.jdbc.Driver
-spring.datasource.url1=jdbc:mysql://2.tcp.ngrok.io:17323/product
+spring.datasource.url1=jdbc:mysql://0.tcp.ngrok.io:12743/sullusv2
 spring.datasource.username1=root
 spring.datasource.password1=irisumakina284
 eureka.instance.hostname1=localhost
