--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto1=update
 spring.datasource.driver-class-name1=com.mysql.cj.jdbc.Driver
 spring.datasource.url1=jdbc:mysql://us-cdbr-east-03.cleardb.com/heroku_717709b133d431a
 spring.datasource.username1=b0d4d477043bb1
-spring.datasource.password1=irisumakina284
+spring.datasource.password1=e4b63b81
 eureka.instance.hostname1=e4b63b81
 eureka.client.service-url.defaultZone1=https://eurekaclient.herokuapp.com/eureka/
 server.port1=0
