--- a/notificaciones-service.properties
+++ b/notificaciones-service.properties
@@ -1,9 +1,10 @@
 spring.jpa.show-sql1=true
 spring.jpa.hibernate.ddl-auto1=update
 spring.datasource.driver-class-name1=com.mysql.cj.jdbc.Driver
-spring.datasource.url1=jdbc:mysql://4.tcp.ngrok.io:17293/sullusv2
-spring.datasource.username1=root
-spring.datasource.password1=irisumakina284
-eureka.instance.hostname1=localhost
+spring.datasource.url1=jdbc:mysql://us-cdbr-east-03.cleardb.com/heroku_717709b133d431a
+spring.datasource.username1=b0d4d477043bb1
+spring.datasource.password1=e4b63b81
+eureka.instance.hostname1=e4b63b81
 eureka.client.service-url.defaultZone1=https://eurekaclient.herokuapp.com/eureka/
 server.port1=0
+
